QoirLib/QoirLibCs.h

// -------- Basic Result Types

typedef struct qoir_size_result_struct {
  const char* status_message;
  size_t value;
} qoir_size_result;
typedef uint32_t qoir_pixel_format;
// clang-format off

#define QOIR_PIXEL_ALPHA_TRANSPARENCY__OPAQUE                  0x01
#define QOIR_PIXEL_ALPHA_TRANSPARENCY__NONPREMULTIPLIED_ALPHA  0x02
#define QOIR_PIXEL_ALPHA_TRANSPARENCY__PREMULTIPLIED_ALPHA     0x03
#define QOIR_PIXEL_COLOR_MODEL__BGRA  0x00
#define QOIR_PIXEL_FORMAT__MASK_FOR_ALPHA_TRANSPARENCY  0x03
#define QOIR_PIXEL_FORMAT__MASK_FOR_COLOR_MODEL         0x0C
#define QOIR_PIXEL_FORMAT__INVALID         0x00
#define QOIR_PIXEL_FORMAT__BGRX            0x01
#define QOIR_PIXEL_FORMAT__BGRA_NONPREMUL  0x02
#define QOIR_PIXEL_FORMAT__BGRA_PREMUL     0x03
#define QOIR_PIXEL_FORMAT__BGR             0x11
#define QOIR_PIXEL_FORMAT__RGBX            0x21
#define QOIR_PIXEL_FORMAT__RGBA_NONPREMUL  0x22
#define QOIR_PIXEL_FORMAT__RGBA_PREMUL     0x23
#define QOIR_PIXEL_FORMAT__RGB             0x31
// clang-format on

typedef struct qoir_pixel_configuration_struct {
  qoir_pixel_format pixfmt;
  uint32_t width_in_pixels;
  uint32_t height_in_pixels;
} qoir_pixel_configuration;
typedef struct qoir_pixel_buffer_struct {
  qoir_pixel_configuration pixcfg;
  uint8_t* data;
  size_t stride_in_bytes;
} qoir_pixel_buffer;
// All int32_t points (x, y) such that ((x0 <= x) && (x < x1) && (y0 <= y) &&
// (y < y1)). The low bounds are inclusive. The high bounds are exclusive.
typedef struct qoir_rectangle_struct {
  int32_t x0;
  int32_t y0;
  int32_t x1;
  int32_t y1;
} qoir_rectangle;
// -------- Tiling

#define QOIR_TILE_MASK 0x3F
#define QOIR_TILE_SIZE 0x40
#define QOIR_TILE_SHIFT 6
// QOIR_LITERALS_PRE_PADDING is large enough to hold the previous pixel, at 4
// bytes per pixel.
#define QOIR_LITERALS_PRE_PADDING 4
// QOIR_TS2 is the maximum (inclusive) number of pixels in a tile.
#define QOIR_TS2 (QOIR_TILE_SIZE * QOIR_TILE_SIZE)
// -------- LZ4 Decode

// QOIR_LZ4_BLOCK_DECODE_MAX_INCL_SRC_LEN is the maximum (inclusive) supported
// input length for this file's LZ4 decode functions. The LZ4 block format can
// generally support longer inputs, but this implementation specifically is
// more limited, to simplify overflow checking.
//
// With sufficiently large input, qoir_lz4_block_encode (note that that's
// encode, not decode) may very well produce output that is longer than this.
// That output is valid (in terms of the LZ4 file format) but isn't decodable
// by qoir_lz4_block_decode.
//
// 0x00FFFFFF = 16777215, which is over 16 million bytes.
#define QOIR_LZ4_BLOCK_DECODE_MAX_INCL_SRC_LEN 0x00FFFFFF
// -------- LZ4 Encode

// QOIR_LZ4_BLOCK_ENCODE_MAX_INCL_SRC_LEN is the maximum (inclusive) supported
// input length for this file's LZ4 encode functions. The LZ4 block format can
// generally support longer inputs, but this implementation specifically is
// more limited, to simplify overflow checking.
//
// 0x7E000000 = 2113929216, which is over 2 billion bytes.
#define QOIR_LZ4_BLOCK_ENCODE_MAX_INCL_SRC_LEN 0x7E000000
// -------- QOIR Decode

typedef struct qoir_decode_pixel_configuration_result_struct {
  const char* status_message;
  qoir_pixel_configuration dst_pixcfg;
} qoir_decode_pixel_configuration_result;
typedef struct qoir_decode_buffer_struct {
  struct {
    // ops has to be before literals, so that (worst case) we can read (and
    // ignore) 8 bytes past the end of the ops array. See §
    uint8_t ops[4 * QOIR_TS2];
    uint8_t literals[QOIR_LITERALS_PRE_PADDING + (4 * QOIR_TS2)];
  } private_impl;
} qoir_decode_buffer;
typedef struct qoir_decode_result_struct {
  const char* status_message;
  void* owned_memory;
  qoir_pixel_buffer dst_pixbuf;

  // Optional metadata chunks.

  const uint8_t* metadata_cicp_ptr;
  size_t metadata_cicp_len;

  const uint8_t* metadata_iccp_ptr;
  size_t metadata_iccp_len;

  const uint8_t* metadata_exif_ptr;
  size_t metadata_exif_len;

  const uint8_t* metadata_xmp_ptr;
  size_t metadata_xmp_len;
} qoir_decode_result;
typedef struct qoir_decode_options_struct {
  // Custom malloc/free implementations. NULL etc_func pointers means to use
  // the standard malloc and free functions. Non-NULL etc_func pointers will be
  // passed the memory_func_context.
  void* (*contextual_malloc_func)(void* memory_func_context, size_t len);
  void (*contextual_free_func)(void* memory_func_context, void* ptr);
  void* memory_func_context;

  // Pre-allocated 'scratch space' used during decoding. Its contents need not
  // be initialized when passed to qoir_decode.
  //
  // If NULL, the 'scratch space' will be dynamically allocated and freed.
  qoir_decode_buffer* decbuf;

  // Pre-allocated pixel buffer to decode into.
  //
  // If zero, it will be dynamically allocated and memory ownership (i.e. the
  // responsibility to call free or equivalent) will be returned as the
  // qoir_decode_result owned_memory field.
  qoir_pixel_buffer pixbuf;

  // If non-zero, this is the pixel format to use when dynamically allocating
  // the pixel buffer to decode into (if the pixbuf field is zero). This pixfmt
  // field has no effect if the pixbuf field is non-zero.
  //
  // A zero-valued pixfmt field is equivalent to the default pixel format:
  // QOIR_PIXEL_FORMAT__RGBA_NONPREMUL.
  qoir_pixel_format pixfmt;

  // Clipping rectangles, in the destination or source (or both) coordinate
  // spaces. The clips (the qoir_rectangle typed fields) have no effect unless
  // the corresponding boolean typed field is true.
  qoir_rectangle dst_clip_rectangle;
  qoir_rectangle src_clip_rectangle;
  bool use_dst_clip_rectangle;
  bool use_src_clip_rectangle;

  // The position (in destination coordinate space) to place the top-left
  // corner of the decoded source image. The Y axis grows down.
  int32_t offset_x;
  int32_t offset_y;
} qoir_decode_options;
// Decodes a pixel buffer from the QOIR format.
//
// A NULL options is valid and is equivalent to a non-NULL pointer to a
// zero-valued struct (where all fields are zero / NULL / false).
__declspec(dllexport) qoir_decode_result  //
qoir_decode(                          //
    const uint8_t* src_ptr,           //
    const size_t src_len,             //
    const qoir_decode_options* options);
// -------- QOIR Encode

typedef struct qoir_encode_buffer_struct {
  struct {
    // ops' size is ((5 * QOIR_TS2) + 64), not (4 * QOIR_TS2), because in the
    // worst case (during encoding, before discarding the too-long ops in favor
    // of literals), each pixel uses QOIR_OP_BGRA8, 5 bytes each. The +64 is
    // for the same reason as §, but the +8 is rounded up to a multiple of a
    // typical cache line size.
    uint8_t ops[(5 * QOIR_TS2) + 64];
    uint8_t literals[QOIR_LITERALS_PRE_PADDING + (4 * QOIR_TS2)];
  } private_impl;
} qoir_encode_buffer;
typedef struct qoir_encode_result_struct {
  const char* status_message;
  void* owned_memory;
  uint8_t* dst_ptr;
  size_t dst_len;
} qoir_encode_result;
typedef struct qoir_encode_options_struct {
  // Custom malloc/free implementations. NULL etc_func pointers means to use
  // the standard malloc and free functions. Non-NULL etc_func pointers will be
  // passed the memory_func_context.
  void* (*contextual_malloc_func)(void* memory_func_context, size_t len);
  void (*contextual_free_func)(void* memory_func_context, void* ptr);
  void* memory_func_context;

  // Pre-allocated 'scratch space' used during encoding. Its contents need not
  // be initialized when passed to qoir_encode.
  //
  // If NULL, the 'scratch space' will be dynamically allocated and freed.
  qoir_encode_buffer* encbuf;

  // Optional metadata chunks.

  const uint8_t* metadata_cicp_ptr;
  size_t metadata_cicp_len;

  const uint8_t* metadata_iccp_ptr;
  size_t metadata_iccp_len;

  const uint8_t* metadata_exif_ptr;
  size_t metadata_exif_len;

  const uint8_t* metadata_xmp_ptr;
  size_t metadata_xmp_len;

  // Lossiness ranges from 0 (lossless) to 7 (very lossy), inclusive.
  uint32_t lossiness;

  // Whether to dither the lossy encoding. This option has no effect if
  // lossiness is zero.
  //
  // The dithering algorithm is relatively simple. Fancier algorithms like
  // https://nigeltao.github.io/blog/2022/gamma-aware-ordered-dithering.html
  // can produce higher quality results, especially for lossiness levels at 6
  // or 7 re overall brightness, but they are out of scope of this library. To
  // use alternative dithering algorithms, apply them to src_pixbuf before
  // passing to qoir_encode.
  bool dither;
} qoir_encode_options;
// Encodes a pixel buffer to the QOIR format.
//
// A NULL options is valid and is equivalent to a non-NULL pointer to a
// zero-valued struct (where all fields are zero / NULL / false).
__declspec(dllexport) qoir_encode_result      //
qoir_encode(                              //
    const qoir_pixel_buffer* src_pixbuf,  //
    const qoir_encode_options* options);